variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: type int
var x:int = 0
      ^RunFour:4: error: not found: value estsurBiscuit
  ; if (estsurBiscuit()) {x = x+1};} 
        ^