variables.RunFour.scala.code
var x:int = 0
while (x!=4) {
  avance()
  ; if (estsurBiscuit()) {x = x+1};}